# vpn-switcher

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
config/: vpn-switcher.env.example
deploy/systemd/: vpn-switcher.service
scripts/: install-systemd.sh
src/: app.rs  config.rs  http.rs  main.rs  outline.rs  state_store.rs  types.rs
